done with basic valuation engine

--- a/EngineDemo.ipynb
+++ b/EngineDemo.ipynb
@@ -58,7 +58,17 @@
     "# Add the Ratio Infomation/Ratio Calculation\n",
     "# free cash flow calculation\n",
     "# free cash flow valuation engin\n",
-    "# valuation on different history time to perform backtest"
+    "# add other calculation method\n",
+    "\n",
+    "# revenue forecast\n",
+    "# adding a smooth method to the revenue\n",
+    "# stats calculate and threshold determine\n",
+    "# profit generation - on each stock\n",
+    "\n",
+    "# valuation on different history time to perform backtest - backtest\n",
+    "# data verification\n",
+    "\n",
+    "# add override table for certain stocks"
    ]
   },
   {
@@ -130,7 +140,7 @@
     {
      "data": {
       "text/plain": [
-       "3.81"
+       "4.03"
       ]
      },
      "execution_count": 8,
@@ -177,16 +187,16 @@
     {
      "data": {
       "text/plain": [
-       "2028   -97985008701\n",
-       "2027   -97985008701\n",
-       "2026   -97985008701\n",
-       "2025   -97985008701\n",
-       "2024   -97985008701\n",
-       "2023   -97773783072\n",
-       "2022   -97926264363\n",
-       "2021   -98061699072\n",
-       "2020   -98067122332\n",
-       "2019   -98096551302\n",
+       "2028   -89407920261\n",
+       "2027   -89407920261\n",
+       "2026   -89407920261\n",
+       "2025   -89407920261\n",
+       "2024   -89407920261\n",
+       "2023   -89205901766\n",
+       "2022   -89351735128\n",
+       "2021   -89481271237\n",
+       "2020   -89486458417\n",
+       "2019   -89514606476\n",
        "dtype: int64"
       ]
      },
@@ -251,18 +261,20 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "1c4d76da-8fa7-490e-899a-78b49aa293ac",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2023-12-31    3.688665e+09\n",
+       "2023-12-31   -1.138200e+09\n",
        "2022-12-31    1.936241e+10\n",
        "2021-12-31    7.418635e+09\n",
        "2020-12-31    6.188286e+09\n",
        "2019-12-31    5.468639e+09\n",
        "2018-12-31   -2.650802e+09\n",
-       "2017-12-31   -2.703247e+09\n",
+       "2017-12-31   -2.616808e+09\n",
        "2016-12-31   -1.546073e+09\n",
        "2015-12-31   -6.154786e+08\n",
        "2014-12-31   -1.287958e+08\n",
@@ -294,13 +306,13 @@
     {
      "data": {
       "text/plain": [
-       "2023-12-31    0.486757\n",
+       "2023-12-31   -0.150197\n",
        "2022-12-31    2.553846\n",
        "2021-12-31    0.978952\n",
        "2020-12-31    0.837083\n",
        "2019-12-31    0.739689\n",
        "2018-12-31   -0.396590\n",
-       "2017-12-31   -0.404615\n",
+       "2017-12-31   -0.391677\n",
        "2016-12-31   -0.253310\n",
        "2015-12-31   -0.108088\n",
        "2014-12-31   -0.023279\n",
@@ -332,16 +344,16 @@
     {
      "data": {
       "text/plain": [
-       "2028    15871590430\n",
-       "2027    15871590430\n",
-       "2026    15871590430\n",
-       "2025    15871590430\n",
-       "2024    15871590430\n",
-       "2023    15871590430\n",
-       "2022    15871590430\n",
-       "2021    15871590430\n",
-       "2020    15871590430\n",
-       "2019    15871590430\n",
+       "2028    15871590431\n",
+       "2027    15871590431\n",
+       "2026    15871590431\n",
+       "2025    15871590431\n",
+       "2024    15871590431\n",
+       "2023    15871590431\n",
+       "2022    15871590431\n",
+       "2021    15871590431\n",
+       "2020    15871590431\n",
+       "2019    15871590431\n",
        "dtype: int64"
       ]
      },
@@ -384,7 +396,7 @@
     {
      "data": {
       "text/plain": [
-       "8.36"
+       "8.58"
       ]
      },
      "execution_count": 17,
@@ -405,7 +417,7 @@
     {
      "data": {
       "text/plain": [
-       "3.81"
+       "4.03"
       ]
      },
      "execution_count": 18,
@@ -426,7 +438,7 @@
     {
      "data": {
       "text/plain": [
-       "23.12"
+       "20.51"
       ]
      },
      "execution_count": 19,
@@ -447,7 +459,7 @@
     {
      "data": {
       "text/plain": [
-       "76.88"
+       "79.49"
       ]
      },
      "execution_count": 20,
@@ -461,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "0c567381-86cd-4a47-9593-4f23912812cc",
    "metadata": {},
    "outputs": [
@@ -469,40 +481,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7.30804\n",
-      "using free cash flow per share as forecasting cashflow  0.4867573845926125\n",
+      "7.646795\n",
+      "using earning per share as forecasting cashflow  1.42\n",
       "using default long term growth 3\n",
-      "using WACC required rate of return 7.30804\n"
+      "using WACC required rate of return 7.646795\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "11.637777414564184"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "longji.RR = True\n",
-    "longji.starting = \"fcfe\"\n",
-    "longji.LTGrowth = True\n",
-    "longji.FV"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "2811d353-0472-4042-8ef7-7ec1b6b023ff",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.42"
+       "31.475457815548133"
       ]
      },
      "execution_count": 22,
@@ -511,70 +499,45 @@
     }
    ],
    "source": [
+    "longji.RR = True\n",
+    "longji.starting = \"eps\"\n",
+    "longji.LTGrowth = True\n",
+    "longji.FV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2811d353-0472-4042-8ef7-7ec1b6b023ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "longji.incomest.eps.iloc[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "1e74e858-5f36-49cc-9c19-060b9812215a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "using free cash flow per share as forecasting cashflow  0.4867573845926125\n",
-      "using default long term growth 3\n",
-      "using WACC required rate of return 7.30804\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "11.637777414564184"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "longji.FV"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "33183d75-6848-4baf-b2a2-58f24231e26b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "using WACC required rate of return 7.30804\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "7.30804"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "longji.RR"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 31,
    "id": "f8b8111c-f901-4f02-bcc5-801bbfbd6897",
    "metadata": {},
    "outputs": [
@@ -601,7 +564,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -612,53 +575,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "id": "88077e67-4d8f-43eb-b45f-c095ec886aef",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.4867573845926125"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "longji.cashflowst.freeCF.iloc[0] / longji.incomest.shares.iloc[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "da179c0e-2cd1-4d88-86c0-cde863b42a94",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "id": "e4fc5eac-7e39-4df8-a267-dcf15cc5f799",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "7.30804\n",
-      "using free cash flow per share as forecasting cashflow  0.4867573845926125\n",
-      "using default long term growth 3\n",
-      "using WACC required rate of return 7.30804\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "11.637777414564184"
+       "2023-12-31   -0.150197\n",
+       "2022-12-31    2.553846\n",
+       "2021-12-31    0.978952\n",
+       "2020-12-31    0.837083\n",
+       "2019-12-31    0.739689\n",
+       "2018-12-31   -0.396590\n",
+       "2017-12-31   -0.391677\n",
+       "2016-12-31   -0.253310\n",
+       "2015-12-31   -0.108088\n",
+       "2014-12-31   -0.023279\n",
+       "2013-12-31   -0.048875\n",
+       "2012-12-31   -0.047046\n",
+       "2011-12-31   -0.154069\n",
+       "2010-12-31    0.046855\n",
+       "2009-12-31   -0.058626\n",
+       "2008-12-31   -0.076999\n",
+       "2007-12-31   -0.002000\n",
+       "dtype: float64"
       ]
      },
      "execution_count": 30,
@@ -667,7 +608,76 @@
     }
    ],
    "source": [
-    "object = stock(\"601012.SS\")\n",
+    "longji.cashflowst.freeCF / longji.incomest.shares"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "da179c0e-2cd1-4d88-86c0-cde863b42a94",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2023-12-31    1.075143e+10\n",
+       "2022-12-31    1.481158e+10\n",
+       "2021-12-31    9.085881e+09\n",
+       "2020-12-31    8.552369e+09\n",
+       "2019-12-31    5.279552e+09\n",
+       "2018-12-31    2.557964e+09\n",
+       "2017-12-31    3.564526e+09\n",
+       "2016-12-31    1.547236e+09\n",
+       "2015-12-31    5.203258e+08\n",
+       "2014-12-31    2.935539e+08\n",
+       "2013-12-31    7.093178e+07\n",
+       "2012-12-31   -5.467216e+07\n",
+       "2011-12-31    2.841103e+08\n",
+       "2010-12-31    4.399917e+08\n",
+       "2009-12-31    1.021203e+08\n",
+       "2008-12-31    1.009238e+08\n",
+       "2007-12-31    7.525740e+07\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "longji.incomest.netInc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "e4fc5eac-7e39-4df8-a267-dcf15cc5f799",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10.791811000000001\n",
+      "using free cash flow per share as forecasting cashflow  6.435575893158461\n",
+      "using default long term growth 3.5\n",
+      "using WACC required rate of return 10.791811000000001\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "91.34659482286371"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "object = stock(\"601888.SS\")\n",
     "object.RR = True\n",
     "object.starting = \"fcfe\"\n",
     "object.LTGrowth = True\n",
@@ -676,34 +686,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "041e1212-3d11-401e-9535-e3821bcea7b3",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3.5"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "object.valuation.growthRateLT"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 26,
    "id": "25b0aad9-c96e-495b-9830-94bcf549da08",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Should Use WACC"
+    "#Should Use WACC\n",
+    "longji.RR = False"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "f84a5c14-96cb-47d3-bd8b-22876120e794",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "longji.starting = \"eps\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "5becaf9b-bedd-42b8-bef9-2a10839fa071",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "longji.LTGrowth = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "a7eef182-c2b2-4343-ac93-e9e0b22de026",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10751425556.0"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "longji.incomest.netInc.iloc[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "780ceb50-c553-4578-8c73-b36050fda44c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2557964089.0"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "longji.incomest.netInc.iloc[0+5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "72ab7b65-a0d0-4764-a07f-3291ce7052bc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
