--- a/Demo.ipynb
+++ b/Demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "39fdfade",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "51e9c80b",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "f5069cea",
    "metadata": {},
    "outputs": [
@@ -38,7 +38,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "8967368a",
    "metadata": {},
    "outputs": [
@@ -65,7 +65,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,35 +76,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "a0d1416e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2024-01-31    19212000\n",
-       "2023-01-31     8024000\n",
-       "2022-01-31     7371000\n",
-       "2021-01-31    -2878000\n",
-       "2020-01-31     1116000\n",
-       "2019-01-31     5170000\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "snow.cashflowst.AP"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
-   "id": "486c6381",
+   "id": "a0d1416e",
    "metadata": {},
    "outputs": [
     {
@@ -130,6 +103,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "id": "486c6381",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2024-01-31    19212000\n",
+       "2023-01-31     8024000\n",
+       "2022-01-31     7371000\n",
+       "2021-01-31    -2878000\n",
+       "2020-01-31     1116000\n",
+       "2019-01-31     5170000\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "snow.cashflowst.AP"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "fcf129fb",
    "metadata": {},
@@ -139,7 +139,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -153,7 +153,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
